Handle number of thread throttling and concurrency with other terminology batch operations